# markdown-flet-app

./: pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/application/: conversion_service.py  pdf_compression_service.py
src/domain/: markdown_converter.py
src/infrastructure/: file_repository.py
src/presentation/: conversion_status.py
tests/: main_test.py  test_pdf_compression.py
