[project]
name = "markdown-flet-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "flet (>=0.25.2,<0.26.0)",
  "markitdown==0.0.1a3",
  "aiofiles==24.1.0",
  "pypdf==5.3.0",
  "pikepdf==9.5.2",
  "pillow==11.1.0"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "markdown-flet-app"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"
[tool.poetry]
name = "markdown-flet-app"
version = "0.1.0"
description = ""
authors = ["ushiro <ushiromukinohimitaine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.25.2"
markitdown = "^0.0.1a3"
pytest = "^8.3.4"
aiofiles = "^24.1.0"
pypdf = "^5.3.0"
pikepdf = "^9.5.2"
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
